# EasyAlgolia

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/async_client/: Cargo.toml
examples/async_client/src/: main.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/custom_document/: .env  Cargo.toml
examples/custom_document/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: algoliaobject.rs  client_builder.rs  error.rs  helper_traits.rs  lib.rs
tests/: test.rs
