[package]
name = "EasyAlgolia"
description = "EasyAlgolia is a Rust crate designed for utilizing the Algolia admin client. It simplifies the process of updating and inserting documents into Algolia's search index."
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = ["Faizal Khan <faizalkhn98641@gmail.com>"]
repository = "https://github.com/iamfaiz123/EasyAlgolia"

[dependencies]

secrecy = "0.8.0"
serde = "1.0.197"
