workspace = { members = ["examples/custom_document"] }


[package]
name = "EasyAlgolia"
description = "EasyAlgolia is a Rust crate designed for utilizing the Algolia admin client. It simplifies the process of updating and inserting documents into Algolia's search index."
version = "1.0.3"
edition = "2021"
license = "MIT"
authors = ["Faizal Khan <faizalkhn98641@gmail.com>"]
repository = "https://github.com/iamfaiz123/EasyAlgolia"

[dependencies]
futures = { version =  "0.3.30" , features = ["executor"] }
# macros = { version = "0.1.0", path = "macros" }
quote = "1.0.35"
reqwest = { version = "0.11.16", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1.0.197" , features = ["derive"] }
serde_json = "1.0.114"
syn = "2.0.52"


