[package]
name = "custom_document"
version = "0.1.0"
edition = "2021"

[dependencies]
EasyAlgolia = { version = "1.0.1", path = "../.." }
derive = "1.0.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
features = "0.10.0"
serde = { version =  "1.0.197" , features = ["derive"]  }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros"] }
